fixing navigation links to open and close when on mobile devices

--- a/src/styles/components/Header/Header.scss
+++ b/src/styles/components/Header/Header.scss
@@ -5,6 +5,11 @@
     background-color: #050505;
     color:#00BFFF;
     text-transform: uppercase;
+
+    .btn-close {
+        background-color: #ffffff;
+        color: #ffffff;
+    }
 }
 .offcanvas-body {
     background-color: #050505;
